--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <groupId>com.sdl</groupId>
     <artifactId>odata-example</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>OData v4 Example Extension</name>
     <description>SDL OData v4 Example DataSource provider and example</description>
