--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2015 SDL Group
+    Copyright (c) 2015-2018 SDL Group and others
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -24,7 +24,7 @@
     <groupId>com.sdl</groupId>
     <artifactId>odata-example</artifactId>
     <packaging>pom</packaging>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <name>OData v4 Example Extension</name>
     <description>SDL OData v4 Example DataSource provider and example</description>
@@ -68,7 +68,6 @@
 
         <java.version>1.8</java.version>
         <spring.boot.version>1.2.3.RELEASE</spring.boot.version>
-
         <odata.version>2.1.0</odata.version>
     </properties>
 
